kubernetes/apps/miak-website/miak-website.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miak-website
  namespace: miak-website
  annotations:
    secret.reloader.stakater.com/reload: "miak-website"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: miak-website
  template:
    metadata:
      labels:
        app.kubernetes.io/name: miak-website
    spec:
      enableServiceLinks: false
      containers:
        - name: miak-website
          image: ghcr.io/1a-khan/miak-phoenix-website:cf68f4d37b5750154c115b02cd2b2c91bd838f8c
          imagePullPolicy: Never
          command:
            - /app/bin/server
          ports:
            - name: http
              containerPort: 4000
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
              httpHeaders:
                - name: Host
                  value: miak-it.de
                - name: X-Forwarded-Proto
                  value: https
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
              httpHeaders:
                - name: Host
                  value: miak-it.de
                - name: X-Forwarded-Proto
                  value: https
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: miak-website
  namespace: miak-website
spec:
  selector:
    app.kubernetes.io/name: miak-website
  ports:
    - name: http
      port: 4000
      targetPort: http
