kubernetes/apps/miak-website/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forwarded-https
  namespace: miak-website
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: https
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miak-website
  namespace: miak-website
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: miak-website-forwarded-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: miak-it.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: miak-website
                port:
                  number: 4000
    - host: www.miak-it.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: miak-website
                port:
                  number: 4000
